--- a/www/package.json
+++ b/www/package.json
@@ -11,9 +11,9 @@
     "life": "file:../pkg"
   },
   "devDependencies": {
-    "webpack": "^4.29.3",
+    "copy-webpack-plugin": "^5.1.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
